force-app/core/default/objects/XC_AFCC_Data_Health_Check__c/XC_AFCC_Data_Health_Check__c.object-meta.xml
<CustomObject>
    <label>Data Health Check</label>
    <nameField>
        <displayFormat>HC-{000000}</displayFormat>
        <label>XC AFCC Data Health Check</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Health Checks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>