force-app/core/default/objects/XC_AFCC_Data_Health_Check__c/fields/XC_AFCC_Check_Name__c.field-meta.xml
<CustomField>
    <fullName>XC_AFCC_Check_Name__c</fullName>
    <label>Check Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>