force-app/core/default/objects/XC_AFCC_Data_Health_Check__c/fields/XC_AFCC_Data_Set_Type__c.field-meta.xml
<CustomField>
    <fullName>XC_AFCC_Data_Set_Type__c</fullName>
    <label>Data Set Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SYNTHETIC</fullName>
                <label>Synthetic</label>
            </value>
            <value>
                <fullName>IMPORTED</fullName>
                <label>Imported</label>
            </value>
            <value>
                <fullName>LIVE</fullName>
                <label>Live</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>