force-app/core/default/objects/XC_AFCC_Data_Health_Check__c/fields/XC_AFCC_Record_Count__c.field-meta.xml
<CustomField>
    <fullName>XC_AFCC_Record_Count__c</fullName>
    <label>Record Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>