force-app/core/default/objects/XC_AFCC_Data_Health_Check__c/fields/XC_AFCC_Run_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>XC_AFCC_Run_Timestamp__c</fullName>
    <label>Run Timestamp</label>
    <type>DateTime</type>
</CustomField>