force-app/core/default/objects/XC_AFCC_Data_Health_Check__c/fields/XC_AFCC_Status__c.field-meta.xml
<CustomField>
    <fullName>XC_AFCC_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PASS</fullName>
                <label>Pass</label>
            </value>
            <value>
                <fullName>WARN</fullName>
                <label>Warning</label>
            </value>
            <value>
                <fullName>FAIL</fullName>
                <label>Fail</label>
            </value>
            <value>
                <fullName>INFO</fullName>
                <label>Info</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>