force-app/core/default/objects/XC_AFCC_Data_Health_Check__c/fields/XC_AFCC_Warning_Level__c.field-meta.xml
<CustomField>
    <fullName>XC_AFCC_Warning_Level__c</fullName>
    <label>Warning Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NONE</fullName>
                <label>None</label>
            </value>
            <value>
                <fullName>LOW</fullName>
                <label>Low</label>
            </value>
            <value>
                <fullName>MEDIUM</fullName>
                <label>Medium</label>
            </value>
            <value>
                <fullName>HIGH</fullName>
                <label>High</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>